--- a/examples/dubbing/e2e-example/frontend/index.html
+++ b/examples/dubbing/e2e-example/frontend/index.html
@@ -3,9 +3,9 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <link rel="icon" type="image/ico" href="/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Elevenvideos</title>
+  <title>Dubbing Example | Elevenlabs</title>
 </head>
 
 <body>
