--- a/examples/conversational-ai/src/index.html
+++ b/examples/conversational-ai/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ElevenLabs Conversational AI Demo</title>
-    <link rel="stylesheet" href="/styles.css">
+    <link rel="stylesheet" href="/static/styles.css">
 </head>
 <body>
     <div class="container">
@@ -18,6 +18,6 @@
             <button id="endButton" class="button" disabled>End Conversation</button>
         </div>
     </div>
-    <script src="/bundle.js"></script>
+    <script src="/static/bundle.js"></script>
 </body>
 </html>
