--- a/examples/text-to-speech/supabase/stream-and-cache-storage/index.html
+++ b/examples/text-to-speech/supabase/stream-and-cache-storage/index.html
@@ -6,7 +6,7 @@
     <title>edge-speech-symphony</title>
     <meta name="description" content="Lovable Generated Project" />
     <meta name="author" content="Lovable" />
-    <meta property="og:image" content="/og-image.png" />
+    <meta property="og:image" content="/Call_Rocky.png" />
   </head>
 
   <body>
